Changelog
----------------

1.0b3 (unreleased)
^^^^^^^^^^^^^^^^^^

- Nothing changed yet.


1.0b2 (2012-11-13)
^^^^^^^^^^^^^^^^^^

* Updated Spanish translation [macagua]

* Update translations [ericof]

* Fix packaging [ericof]


1.0b1 (2012-10-30)
^^^^^^^^^^^^^^^^^^^^

* Add an action to remove existing user groups [ericof]

* PEP8 [ericof]

* Travis support [ericof]

0.5 (2011-09-15)
^^^^^^^^^^^^^^^^^^

* Spanish translation [hvelarde]

* Initial release [erico_andrei]
