@@ -1,3 +1,15 @@
 *.egg-info
 *.mo
 *.pyc
+*~
+.installed.cfg
+.mr.developer.cfg
+bin/
+develop-eggs/
+downloads/
+eggs/
+parts/
+products/
+src/
+var/
+buildout.cfg
