@@ -1,14 +1,27 @@
 language: python
-python:
-  - 2.7
-
+python: 2.7
+env:
+  - PLONE_VERSION=4.2
+  - PLONE_VERSION=4.3 QA=true
+matrix:
+  include:
+    - python: 2.6
+      env: PLONE_VERSION=4.1
 install:
-  - python bootstrap.py
-  - bin/buildout
-
+  - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
+  - mkdir -p buildout-cache/downloads
+  - python bootstrap.py -c travis.cfg
+  - bin/buildout -c travis.cfg annotate
+  - bin/buildout -c travis.cfg -N -q
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script:
-  - ./pre-commit-check.sh
-
+  - test $QA bin/code-analysis && bin/zopepy setup.py check -mrs || true
+  - bin/test
+after_success:
+  - test $QA && bin/coverage.sh && pip install -q coveralls && coveralls || true
+after_failure:
+  - firefox -v
 notifications:
-  irc:
-    - "irc.freenode.org#simplesconsultoria"
+  irc: irc.freenode.org#simplesconsultoria
