@@ -1,6 +1,3 @@
-include *.txt
-
-recursive-include src *
-recursive-include docs *
-
-global-exclude *pyc
+include *.rst
+graft docs
+graft src
