@@ -1,42 +1,25 @@
 [buildout]
 extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
 package-name = sc.contentrules.group
 package-extras = [test]
 
 parts +=
-	omelette
-	scripts
-	createzopecoverage
+    i18ndude
+    omelette
 
-# network speedup
-socket-timeout = 3
-allow-hosts =
-    *.python.org
-    docutils.sourceforge.net
-    prdownloads.sourceforge.net
-    effbot.org
+[code-analysis]
+directory = ${buildout:directory}/src/sc/contentrules/group
+pre-commit-hook = False
+flake8-ignore = E501
+flake8-max-complexity = 11
 
-[test]
-defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
+[i18ndude]
+recipe = zc.recipe.egg
+eggs = i18ndude
 
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
-
-[scripts]
-recipe = z3c.recipe.scripts
-dependent-scripts = true
-interpreter = zopepy
-eggs =
-    ${buildout:eggs}
-    sc.contentrules.group [develop]
-
-[createzopecoverage]
-recipe = createzopecoverage
-
-[versions]
-Sphinx = 1.1.3
-zc.buildout = 1.6.1
-zc.recipe.egg = 1.3.2
