@@ -1,0 +1,26 @@
+[buildout]
+extends =
+    https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
+
+package-name = sc.contentules.group
+package-extras = [develop, test]
+package-min-coverage = 87
+test-eggs = Pillow
+
+parts +=
+    createcoverage
+    coverage-sh
+    zopepy
+
+[code-analysis]
+directory = ${buildout:directory}/src/sc/contentules/group
+pre-commit-hook = False
+flake8-ignore = E501
+flake8-max-complexity = 11
+
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${instance:eggs}
+interpreter = zopepy
+scripts = zopepy
