@@ -4,7 +4,9 @@ Changelog
 1.0b3 (unreleased)
 ^^^^^^^^^^^^^^^^^^
 
-- Nothing changed yet.
+* Coveralls support [ericof]
+
+* Implement better QA for code [ericof]
 
 
 1.0b2 (2012-11-13)
